/*
 * Copyright (c) 2020 gematik GmbH
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *    http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package de.gematik.ti.healthcardaccess.operation;

import java.util.concurrent.ExecutorService;

import de.gematik.ti.healthcardaccess.operation.scheduler.DefaultScheduler;

/**
 * Subscriber interface for Operation callback.
 *
 * @param <T> - Type of the Result object
 *
 */
public interface Subscriber<T> {
    void onSuccess(T value);

    void onError(Throwable t) throws RuntimeException;

    default ExecutorService subscriberScheduler() {
        return DefaultScheduler.getInstance().subscriberScheduler();
    }

    default ExecutorService observerScheduler() {
        return DefaultScheduler.getInstance().observerScheduler();
    }
}
